# isonaut

./: .gitignore  CMakeLists.txt  README.md  isofilter.c  isofilter.cpp  isofilter.h  isofilter_main.c  main.cpp  makefile  model.cpp  model.h  nausparse.h  nauty.h  nauty_utils.cpp  nauty_utils.h  new_model.cpp  notes  old_nauty_utils.cpp  perf.xlsx  test_iso_graph.c  test_iso_graph.h
test_data/: chains_3.out  inverse_semi_3.out  quasigroups_3.out  semi3.out  semi_3.out
